--- a/doc/Esterni/Piano_di_progetto/diario.tex
+++ b/doc/Esterni/Piano_di_progetto/diario.tex
@@ -4,7 +4,7 @@
 \begin{diario}
 	2.0.0 & {\LS} (Responsabile) & 03/03/2017 & Approvazione documento \\\hline
 	1.1.0 & {\LB} (Verificatore) & 03/03/2017 & Verifica del documento \\\hline
-	1.0.3 & {\GG} (Responsabile) & 18/02/2017 & Inserito consuntivo di periodo per l'\ARI e per la \PA e aggiornato il preventivo a finire \\ \hline
+	1.0.3 & {\GG} (Responsabile) & 18/02/2017 & Inserito consuntivo di periodo per l'\ARI e per la \PA \\ \hline
 	1.0.2 & {\GG} (Responsabile) & 10/02/2017 & Correzione errore di formattazione nella sezione 1.5.1, spostate le descrizioni dei modelli di sviluppo come Appendice e cambiata la struttura dell'Analisi dei rischi in tabella \\ \hline
 	1.0.1 & {\GG} (Responsabile) & 06/02/2017 & Riduzione ore di lavoro come Progettista per \PB, \MM, \LS, \AZ, correzione delle relative tabelle e aggiornato il preventivo\\ \hline
 	1.0.0 & {\PB} (Responsabile) & 09/01/2017 & Approvazione documento \\ \hline
