tolta data ultima modifica

--- a/doc/util/hx-front.sty
+++ b/doc/util/hx-front.sty
@@ -26,7 +26,7 @@
 		\begin{tabular}{r | l}
 			\textbf{Versione}  & \@vers  \\
 			\textbf{Data di creazione}  & \@creaz \\
-			\textbf{Ultima modifica}  & \@date \\
+%			\textbf{Ultima modifica}  & \@date \\
 			\textbf{Redazione} & \@author \\
 			\textbf{Verifica}  & \@supervisor \\
 			\textbf{Uso}  & \@uso \\
