--- a/doc/Esterni/Specifica_tecnica/tex/arch.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/arch.tex
@@ -71,9 +71,9 @@ L'architettura del client è suddivisa in tre package:
 
 %%% [...]
 
-% >>> RICORDARSI DEL DIAGR. DEI PACKAGE DEL CLIENT 
+% >>> RICORDARSI DEL DIAGR. DEI PACKAGE DEL CLIENT (diag. 0 [, 2])
 % \begin{center}
-% 	\includegraphics[scale=0.5]{img/pkg_client}
+% 	\includegraphics[scale=0.5]{img/client_pkg}
 % \end{center}
 
 
@@ -101,9 +101,9 @@ Il secondo e il terzo servizio, invece, sono un programma Java che genera due \e
 	\item \textbf{\texttt{utility}} espone classi di utilità per il programma, come ad esempio una classe \texttt{Compressor} che comprime l'output di un \texttt{Compiler} in formato ZIP. % è pulito tenere un package con un nome così generico?
 \end{itemize}
 
-% >>> RICORDARSI DEL DIAGR. DEI PACKAGE DEL SERVER 
+% >>> RICORDARSI DEL DIAGR. DEI PACKAGE DEL SERVER (diag. 7)
 % \begin{center}
-% 	\includegraphics[scale=0.5]{img/pkg_server}
+% 	\includegraphics[scale=0.5]{img/server_pkg}
 % \end{center}
 
 
