aggiunto diagr. pkg client

--- a/doc/Esterni/Specifica_tecnica/tex/arch.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/arch.tex
@@ -62,6 +62,11 @@ Il \texttt{body} (corpo) della pagina HTML si compone di pochi blocchi:
 \end{itemize}
 Alla ricezione della pagina da parte del client, lo script JavaScript popola il tag \texttt{svg} (inizialmente vuoto) con un diagramma delle classi vuoto.
 
+% >>> RICORDARSI DEL DIAGR. DEI PACKAGE DEL CLIENT (diag. 0 [, 2])
+\begin{center}
+	\includegraphics[scale=0.5]{img/client_pkg}
+\end{center}
+
 L'architettura del client è suddivisa in tre package:
 \begin{itemize}
 	\item \texttt{model}, che gestisce la logica sottostante i diagrammi;
@@ -70,11 +75,6 @@ L'architettura del client è suddivisa in tre package:
 \end{itemize}
 
 %%% [...]
-
-% >>> RICORDARSI DEL DIAGR. DEI PACKAGE DEL CLIENT (diag. 0 [, 2])
-% \begin{center}
-% 	\includegraphics[scale=0.5]{img/client_pkg}
-% \end{center}
 
 
 
