formattazione immagini arch@ST

--- a/doc/Esterni/Specifica_tecnica/tex/appbackbone.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/appbackbone.tex
@@ -1,6 +1,6 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%  Note a riguardo di Backbone.js
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%  Architettura di Backbone.js
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 
