--- a/doc/Esterni/Specifica_tecnica/tex/componenti.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/componenti.tex
@@ -8,7 +8,7 @@
 
 
 
-\subsection{\gloss{Client}}
+\subsection{Client}
 
 \subsubsection{MainApp}
 % ...
@@ -21,7 +21,7 @@
 
 
 
-\subsection{\gloss{Server}}
+\subsection{Server}
 % server==package principale
 %Controller== classe che fa da Front Controller
 %generator== package dentro server che fa il lavoro di creare il zip
