--- a/doc/Esterni/Specifica_tecnica/Specifica_tecnica_0_0_1.tex
+++ b/doc/Esterni/Specifica_tecnica/Specifica_tecnica_0_0_1.tex
@@ -55,7 +55,7 @@
 
 \appendix
 
-\section{Note a riguardo di Backbone.js}
+\section{Architettura di Backbone.js}
 \input{tex/appbackbone}
 
 \end{document}
