NdP: tolta norma su data ultima modifica

--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_2_0_0.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_2_0_0.tex
@@ -387,7 +387,7 @@ Riportiamo qui di seguito le norme che riguardano lo sviluppo della documentazio
 	\item nome del documento;
 	\item versione del documento;
 	\item data di creazione del documento;
-	\item data di ultima modifica del documento;
+%	\item data di ultima modifica del documento;
 	\item nome e cognome dei membri del gruppo incaricati della redazione del documento;
 	\item nome e cognome dei membri del gruppo incaricati della verifica del documento;
 	\item destinazione d'uso del documento;
