appendice dependency injection

--- a/doc/Esterni/Specifica_tecnica/Specifica_tecnica_0_0_1.tex
+++ b/doc/Esterni/Specifica_tecnica/Specifica_tecnica_0_0_1.tex
@@ -57,5 +57,8 @@
 
 \section{Note a riguardo di Backbone.js}
 \input{tex/appbackbone}
+\section{Pattern creazionali}
+\subsection{Dependency injection}
+\input{tex/depinjection}
 
 \end{document}
