ampliata descriz architettura client + altro

--- a/doc/Esterni/Specifica_tecnica/Specifica_tecnica_0_0_1.tex
+++ b/doc/Esterni/Specifica_tecnica/Specifica_tecnica_0_0_1.tex
@@ -57,8 +57,8 @@
 
 \section{Architettura di Backbone.js}
 \input{tex/appbackbone}
+
 \section{Pattern creazionali}
-\subsection{Dependency injection}
-\input{tex/depinjection}
+\input{tex/pattern}
 
 \end{document}
