--- a/doc/Esterni/Specifica_tecnica/tex/tecnologie.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/tecnologie.tex
@@ -5,14 +5,14 @@
 
 
 \subsection{Client} \label{sec:tech_client}
-Implementeremo il \gloss{client} di \proj{} con le tecnologie web richieste dal capitolato d'appalto: \gloss{HTML5}, \gloss{CSS3} e \gloss{JavaScript}. Di seguito elenchiamo e descriviamo le librerie JavaScript di cui il nostro client necessita. Tutte le librerie sono open-source, come richiesto dal capitolato.
+Implementeremo il \gloss{client} di \proj{} con le tecnologie web richieste dal capitolato d'appalto: HTML5, CSS3 e JavaScript. Di seguito elenchiamo e descriviamo le librerie JavaScript di cui il nostro client necessita. Tutte le librerie sono open-source, come richiesto dal capitolato.
 
 \subsubsection{JointJS}
-La libreria \jointjs{} (\url{www.jointjs.com/opensource}) è una libreria open-source per realizzare \gloss{editor} di diagrammi interattivi, in maniera altamente personalizzabile.
+La libreria \jointjs{} (\url{www.jointjs.com/opensource}) è una libreria open-source per realizzare editor di diagrammi interattivi, in maniera altamente personalizzabile.
 
 La libreria sfrutta le seguenti tecnologie per il suo funzionamento:
 \begin{itemize}
-	\item \html: \jointjs{} richiede che una pagina \html{} sia popolata con un tag \texttt{<canvas>}, che conterrà un diagramma.
+	\item \html: \jointjs{} richiede che una pagina \html{} sia popolata con un tag \texttt{<svg>}, che conterrà un diagramma.
 	\item Le seguenti librerie \js:
 	\begin{itemize}
 		\item \jquery;
@@ -37,11 +37,11 @@ La libreria \requirejs{} è un loader di moduli e file \js{}. Esso si occuperà 
 \subsubsection{\lodash}
 La libreria \lodash{} fornisce metodi di utilità non offerti da \js{} puro. Rispetto alla simile libreria \emph{Underscore}, questa fornisce più performance, più features e miglior documentazione. Essa inoltre è usata da \jointjs{}.
 
-\subsubsection{qunit}
-assertions, test di regressione
+% \subsubsection{qunit}
+% assertions, test di regressione
 
-\subsubsection{sinonjs}
-stubs, mocks, (test spies??)
+% \subsubsection{sinonjs}
+% stubs, mocks, (test spies??)
 
 
 
@@ -51,7 +51,7 @@ stubs, mocks, (test spies??)
 Il \emph{back end} della nostra applicazione è ospitato su un \gloss{server} Apache Tomcat, come richiesto dal capitolato d'appalto nel caso il \emph{back end} fosse scritto in Java.
 
 \subsubsection{Pivotal Spring}
-Le richieste HTTP inviate dal client al server vengono gestite tramite la libreria open-source Spring (disponibile all'indirizzo \url{spring.io}), utile per aderire ai princìpi dello stile architetturale REST.
+Le richieste HTTP inviate dal client al server vengono gestite tramite la libreria open-source \emph{Spring} (disponibile all'indirizzo \url{spring.io}), utile per aderire ai princìpi dello stile architetturale REST.
 
 \subsubsection{StringTemplate}
 StringTemplate è una libreria open-source scritta da Terence Parr e disponibile all'indirizzo \url{stringtemplate.org}. Il server della nostra applicazione la utilizza per:
@@ -63,5 +63,3 @@ I marcatori definiti dalla libreria servono da segnaposto per ospitare i dati ot
 
 \subsubsection{Google Gson}
 Google Gson è una libreria open-source disponibile all'indirizzo \url{github.com/google/gson}. Essa permette di convertire un oggetto JSON in un oggetto Java che abbia, come campi dati, un sovrainsieme delle chiavi presenti nell'oggetto JSON; l'oggetto JSON dev'essere contenuto in una stringa Java. I valori delle chiavi dell'oggetto JSON diventano i valori dei campi dati dell'oggetto Java. La libreria permette anche il procedimento inverso (da Java a JSON), che però non usiamo nella nostra applicazione.
-
-%%% [altro...]
