--- a/doc/Esterni/Specifica_tecnica/tex/tracciamento.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/tracciamento.tex
@@ -8,12 +8,13 @@
 
 
 
-\subsection{Tracciamento componenti-requisiti}
 
 % [...]
+\input{tex/tracciamentoClassiRequisiti}
 
 
+\pagebreak
 
-\subsection{Tracciamento requisiti-componenti}
 
 % [...]
+\input{tex/tracciamentoRequisitiClassi}
