Modifica test per freccia tolta View-X->JointJS

--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_1_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_1_0_0.tex
@@ -1843,7 +1843,7 @@ I test di sistema vengono eseguiti sul prodotto una volta che tutte le sue compo
 \hypertarget{TI16}{TI16} & Verificare che il sistema gestisca correttamente le componenti relative al package Collection. In particolare che gestisca correttamente l'interazione con il package Model di SWEDesigner::Client e la libreria esterna JointJS. & \textit{Non Implementato}\\ \hline
 \hypertarget{TI17}{TI17} & Verificare che il sistema gestisca correttamente le componenti relative al package Model. In particolare che gestisca correttamente l'interazione con i package Collection e View di SWEDesigner::Client e la libreria esterna JointJS. & \textit{Non Implementato}\\ \hline
 \hypertarget{TI18}{TI18} & Verificare che il sistema gestisca correttamente le componenti relative al package Model::Utility. In particolare che gestisca correttamente l'interazione con i package Model::CellType, Model e View di SWEDesigner::Client. & \textit{Non Implementato}\\ \hline
-\hypertarget{TI19}{TI19} & Verificare che il sistema gestisca correttamente le componenti relative al package View. In particolare che gestisca correttamente l'interazione con i package Model, Model::CellType e Model::Utility di SWEDesigner::Client e la libreria esterna JointJS. & \textit{Non Implementato}\\ \hline
+\hypertarget{TI19}{TI19} & Verificare che il sistema gestisca correttamente le componenti relative al package View. In particolare che gestisca correttamente l'interazione con i package Model, Model::CellType e Model::Utility di SWEDesigner::Client. & \textit{Non Implementato}\\ \hline
 \caption[Test di Integrazione]{Test di Integrazione}
 \label{tabella:test2}
 \end{longtable}
